# RoboMachine

./: .gitignore  README.md  README.rest  copyright.txt  index.html  release.sh  requirements.txt  rundevel.sh  setup.cfg  setup.py
atest/: infinite.robomachine  one_state_no_actions.robomachine  pass_and_fail_machine.robomachine  robomachina_generator.txt  selenium_demo_fsm.robomachine  selenium_demo_machine.robomachine  selenium_demo_machine.txt  testingmachine.robomachine
example/webapp/: KeywordLibrary.py  model.robomachine  test.sh
robomachine/: __init__.py  allpairsstrategy.py  generator.py  model.py  parsing.py  rules.py  runner.py  strategies.py  version.py
robomachine/test/: generation_test.py  robomachina_test.py  rules_test.py  strategies_test.py  variable_test.py
sample/webapp/: .gitignore  KeywordLibrary.py  LICENSE.md  model.robomachine
scripts/: robomachine
src/: testingmachine.txt
src/robomachina/: __init__.py  model.py  parsing.py  robomachina_test.py  runner.py  variable_test.py
src/robomachine/: __init__.py  allpairsstrategy.py  generator.py  model.py  parsing.py  rules.py  runner.py  strategies.py
test/: __init__.py  generation_test.py  model_test.py  robomachina_test.py  rules_test.py  strategies_test.py  variable_test.py
utest/: model_test.py  robomachina_test.py  rules_test.py  strategies_test.py  variable_test.py
