[metadata]
name = RoboMachine
author = Mikko Korpela
author_email = mikko.korpela@gmail.com
url = https://github.com/mkorpela/RoboMachine
download_url = https://pypi.org/project/RoboMachine/
project_urls =
    Source = https://github.com/mkorpela/RoboMachine
version = attr: robomachine.__version__
description = Test data generator for Robot Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
    License :: OSI Approved :: Apache Software License
    Framework :: Robot Framework

[options]
python_requires = >=3.6
package_dir =
    = src
packages=find:
include_package_data = True
install_requires =
    robotframework>=3.2
    pyparsing<3
    argparse
    allpairspy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
     robomachine = robomachine.runner:main